[package]
name = "xcm-transactor"
authors = ["PureStake"]
edition = "2018"
version = "0.1.0"

[dependencies]
serde = { version = "1.0.124", optional = true }

# Moonbeam
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }

# Substrate
frame-support = { git = "https://github.com/axtend/axlib", branch = "e09e70a", default-features = false }
frame-system = { git = "https://github.com/axtend/axlib", branch = "e09e70a", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-io = { git = "https://github.com/axtend/axlib", branch = "e09e70a", default-features = false }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "e09e70a", default-features = false }
sp-std = { git = "https://github.com/axtend/axlib", branch = "e09e70a", default-features = false }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "cumulus", default-features = false }

# Polkadot / XCM
orml-traits = { git = "https://github.com/axtend/open-runtime-module-library", branch = "f25eb35", default-features = false }
polkadot-runtime-common = { git = "https://github.com/axtend/axia", branch = "415ce0d", default-features = false }
xcm = { git = "https://github.com/axtend/axia", branch = "415ce0d", default-features = false }
xcm-builder = { git = "https://github.com/axtend/axia", branch = "415ce0d", default-features = false }
xcm-executor = { git = "https://github.com/axtend/axia", branch = "415ce0d", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
pallet-xcm = { git = "https://github.com/axtend/axia", branch = "415ce0d" }
parity-scale-codec = { version = "2.1.1" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }

[features]
default = ["std"]
std = [
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"polkadot-runtime-common/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-executor/std",
	"xcm-primitives/std",
	"xcm/std",
]
