[package]
name = "xcm-transactor"
authors = ["PureStake"]
edition = "2018"
version = "0.1.0"

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0.124", optional = true }

# Moonbeam
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }

# Axlib
frame-support = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
frame-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-std = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "b43fcff", default-features = false }

# Axia / XCM
orml-traits = { git = "https://github.com/axtend/open-runtime-module-library", branch = "7ba9fad", default-features = false }
xcm = { git = "https://github.com/axtend/axia", branch = "66cb46b", default-features = false }
xcm-builder = { git = "https://github.com/axtend/axia", branch = "66cb46b", default-features = false }
xcm-executor = { git = "https://github.com/axtend/axia", branch = "66cb46b", default-features = false }

# Benchmarks
frame-benchmarking = { git = "https://github.com/axtend/axlib", branch = "c92f69d", optional = true, default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-xcm = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
parity-scale-codec = { version = "2.1.1" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = ["std"]
std = [
	"cumulus-primitives-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"parity-scale-codec/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-executor/std",
	"xcm-primitives/std",
	"xcm/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
