[package]
name = "allychain-staking-precompiles"
authors = ["PureStake"]
description = "A Precompile to make allychain staking accessible to pallet-evm"
edition = "2018"
version = "1.0.0"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }

# Axtend
allychain-staking = { path = "../../pallets/allychain-staking", default-features = false }
precompile-utils = { path = "../utils", default-features = false }

# Axlib
codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = [
	"max-encoded-len",
] }
frame-support = { git = "https://github.com/axtend/axlib", branch = "axlib", default-features = false }
frame-system = { git = "https://github.com/axtend/axlib", branch = "axlib", default-features = false }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib", default-features = false }
sp-io = { git = "https://github.com/axtend/axlib", branch = "axlib", default-features = false }
sp-std = { git = "https://github.com/axtend/axlib", branch = "axlib", default-features = false }


# Frontier
fp-evm = { git = "https://github.com/axtend/frontier", branch = "frontier", default-features = false }
pallet-evm = { git = "https://github.com/axtend/frontier", branch = "frontier", default-features = false }

[dev-dependencies]
derive_more = "0.99"
serde = "1.0.100"
sha3 = "0.9"

# Axlib
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "axlib" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", branch = "axlib" }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "axlib" }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"allychain-staking/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
]
