[package]
name = "pallet-author-mapping-precompiles"
authors = ["PureStake"]
description = "A Precompile to make pallet-author-mapping accessible to pallet-evm"
edition = "2018"
version = "0.2.0"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }

# Axtend
pallet-author-mapping = { path = "../../pallets/author-mapping", default-features = false }
precompile-utils = { path = "../utils", default-features = false }

# Axlib
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
fp-evm = { git = "https://github.com/axtend/frontier", branch = "2be428c", default-features = false }
frame-support = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
frame-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-std = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }

# Frontier
pallet-evm = { git = "https://github.com/axtend/frontier", branch = "2be428c", default-features = false }

[dev-dependencies]
derive_more = "0.99"
hex-literal = "0.3.4"
# Nimbus
nimbus-primitives = { git = "https://github.com/axtend/nimbus", branch = "5f92d14" }
serde = "1.0.100"

# Axlib
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-scheduler = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-author-mapping/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
