[package]
name = "relay-encoder-precompiles"
authors = ["PureStake"]
description = "A Precompile to make relay staking calls encoding accessible to pallet-evm"
edition = "2018"
version = "0.1.0"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }

# Moonbeam
precompile-utils = { path = "../utils", default-features = false }

# Axlib
frame-support = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
frame-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
pallet-staking = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = [
	"derive",
] }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-std = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }


# Frontier
fp-evm = { git = "https://github.com/axtend/frontier", branch = "2be428c", default-features = false }
pallet-evm = { git = "https://github.com/axtend/frontier", branch = "2be428c", default-features = false }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "b43fcff", default-features = false }

[dev-dependencies]
derive_more = "0.99"
hex-literal = "0.3.3"
serde = "1.0.100"
sha3 = "0.9"

# Axlib
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }

# Cumulus
cumulus-pallet-allychain-system = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }

[features]
default = ["std"]
std = [
	"cumulus-primitives-core/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"pallet-staking/std",
	"parity-scale-codec/std",
	"parity-scale-codec/std",
	"precompile-utils/std",
	"sp-runtime/std",
	"sp-std/std",
]
