[package]
name = "xtokens-precompiles"
authors = ["PureStake"]
description = "A Precompile to make xtokens accessible to pallet-evm"
edition = "2018"
version = "0.1.0"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }

# Moonbeam
precompile-utils = { path = "../utils", default-features = false }
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }

# Substrate
frame-support = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
sp-std = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/axtend/frontier", branch = "2be428c", default-features = false }
frame-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d", default-features = false }
pallet-evm = { git = "https://github.com/axtend/frontier", branch = "2be428c", default-features = false }

# Polkadot / XCM
orml-xtokens = { git = "https://github.com/axtend/open-runtime-module-library", branch = "7ba9fad", default-features = false }
xcm = { git = "https://github.com/axtend/axia", branch = "66cb46b", default-features = false }

[dev-dependencies]
derive_more = "0.99"
serde = "1.0.100"
sha3 = "0.9"

# Substrate
codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = [
	"max-encoded-len",
] }
pallet-balances = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
scale-info = { version = "1.0", features = ["derive"] }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }

# Polkadot
pallet-xcm = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
xcm-builder = { git = "https://github.com/axtend/axia", branch = "66cb46b" }
xcm-executor = { git = "https://github.com/axtend/axia", branch = "66cb46b" }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"orml-xtokens/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"xcm-primitives/std",
]
