[package]
name = "axtend-rpc-trace"
authors = ["PureStake"]
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/axtend/"
version = "0.6.0"

[dependencies]
ethereum = { version = "0.11.1", features = ["with-codec"] }
ethereum-types = "0.12.1"
futures = { version = "0.3" }
jsonrpc-core = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9"
tokio = { version = "1.10", features = ["sync", "time"] }
tracing = "0.1.25"

# Axtend
axtend-client-evm-tracing = { path = "../../evm-tracing" }
axtend-rpc-core-trace = { path = "../../rpc-core/trace" }
axtend-rpc-core-types = { path = "../../rpc-core/types" }
axtend-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }

# Axlib
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-utils = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-std = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Frontier
fc-consensus = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
fc-rpc = { git = "https://github.com/axtend/frontier", branch = "2be428c", features = [
    "rpc_binary_search_estimate",
] }
fc-rpc-core = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
fp-rpc = { git = "https://github.com/axtend/frontier", branch = "2be428c" }
