[package]
name = "moonbeam-rpc-txpool"
authors = ["PureStake"]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
ethereum-types = "0.12.0"
frame-system = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
jsonrpc-core = "18.0.0"
moonbeam-rpc-core-txpool = { path = "../../rpc-core/txpool" }
rlp = "0.5"
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "e09e70a", features = [
    "test-helpers",
] }
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9"
sp-api = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }
sp-std = { git = "https://github.com/axtend/axlib", branch = "e09e70a" }

fc-rpc = { git = "https://github.com/axtend/frontier", branch = "2da9bb8", features = [
    "rpc_binary_search_estimate",
] }
moonbeam-rpc-primitives-txpool = { path = "../../../primitives/rpc/txpool" }
