[package]
name = "axtend-rpc-txpool"
authors = ["PureStake"]
edition = "2018"
homepage = "https://axtend.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/axtend/"
version = "0.6.0"

[dependencies]
jsonrpc-core = "18.0.0"
rlp = "0.5"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9"

# Moonbeam
axtend-rpc-core-txpool = { path = "../../rpc-core/txpool" }
axtend-rpc-primitives-txpool = { path = "../../../primitives/rpc/txpool" }

# Axlib
frame-system = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-std = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Frontier
ethereum-types = "0.12.1"
fc-rpc = { git = "https://github.com/axtend/frontier", branch = "2be428c", features = [
    "rpc_binary_search_estimate",
] }
